--- a/devops_workspace/mysql8.0_docker_compose/docker-compose.yml
+++ b/devops_workspace/mysql8.0_docker_compose/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       MYSQL_ROOT_PASSWORD: yunwei3322
     volumes:
       - ./data:/var/lib/mysql
-      - ./config:/etc/mysql
+      #- ./config:/etc/mysql
     command:
       --default-authentication-plugin=mysql_native_password
       --character-set-server=utf8mb4
